# RubinLSSTStableStarsinDDF

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
benchmarks/: asv.conf.json  benchmarks.py
docs/: conf.py  index.rst  requirements.txt
notebooks/: README.md
notebooks/01_askSimbad_stars/: 01_findStarsinSimbad.ipynb  02_StableStars_inRubinVisits.ipynb  03_show_StableStars_cutouts.ipynb  04_makelist_forRubinPortal.ipynb  99_testHips.ipynb  README.md
notebooks/01_askSimbad_stars/data_SIMBAD_01/: COSMOS_stars_V17-20_r1.5deg.csv  COSMOS_stars_V17-21_r1.5deg.csv  COSMOS_stars_V17-21_r2.0deg.csv  ECDFS_stars_V17-20_r1.5deg.csv  ECDFS_stars_V17-21_r1.5deg.csv  ELAIS-S1_stars_V17-20_r1.5deg.csv  ELAIS-S1_stars_V17-21_r1.5deg.csv  XMM-LSS_stars_V17-20_r1.5deg.csv  XMM-LSS_stars_V17-21_r1.5deg.csv  XMM-LSS_stars_V17-21_r2.0deg.csv  master_stable_stars_V17-20_r1.5deg.csv  master_stable_stars_V17-20_r1.5deg.parquet  master_stable_stars_V17-21_r1.5deg.csv  master_stable_stars_V17-21_r1.5deg.parquet  master_stable_stars_V17-21_r2.0deg.csv  master_stable_stars_V17-21_r2.0deg.parquet
notebooks/01_askSimbad_stars/data_SIMBAD_02/: summary_visit_counts_per_star.csv  summary_visit_counts_per_star.parquet
notebooks/01_askSimbad_stars/data_SIMBAD_04/: stable_stars_DDFCOSMOS.csv  stable_stars_DDFCOSMOS_V17-21_r2.0deg.csv  stable_stars_DDFECDFS.csv  stable_stars_DDFECDFS_V17-21_r2.0deg.csv  stable_stars_DDFXMM-LSS.csv
notebooks/02_GetRubinVisits/: 2026-03-25_FindObservationsInButlerRegistryInTractPatch.ipynb  2026-03-26_DP2_ConstDB_Butler_LSSTCam_VisitsTractPatch.ipynb  README.md
notebooks/03_VisualiseCoadds/usdf_butler/: 01_LSSTCamDeepCoaddsMosaicFirefly_inDDF.ipynb  02_LSSTCamDeepCoaddsMosaicMatplotlib_inDDF.ipynb  03_LSSTCamDeepCoaddsAndObjectsFirefly_inDDF.ipynb  README.md
notebooks/04_FindObjects/usdf_butler/: 00_QueryButler.ipynb  01_LoadLSSTCamDeepcoaddsCutout.ipynb  02_MatchTargetsWithLSSTCamObjects.ipynb  03_MatchTargetsWithLSSTCamSources.ipynb  03_extract_lightcurves.py  README.md
notebooks/05_FindSources/usdf_butler/: 01_MatchTargetsWithLSSTCamSources.ipynb  02_MergeLCsourceswithMJD.ipynb  03_PlotLCwithMJD.ipynb  04_PlotLCwithMJD_multiflux.ipynb  05_AddLSSTCalibParam.ipynb  05b_AddLSSTCalibParam.ipynb  06_AnaCalib.ipynb  07_CheckCalibCoeff.ipynb  08_AddLSSTFGCM.ipynb  09_AnaFGCM.ipynb  10_PlotLCwithMJDComparewithCalibs.ipynb  96-AccessFGCM.ipynb  97-ExtractFGCMAtmosphericParameters.ipynb  98_ReadPhotoCalib.ipynb  99_ReadDP2VisitsTable.ipynb  README.md  libExtractLightcurves.py
tests/rubinlsststablestarsinddf/: test_example_module.py  test_packaging.py
(+509 files in other folders)
